@@ -32,6 +32,11 @@
 # For additional information see http://www.ethernut.de/
 #
 # $Log: Makefile,v $
+# Revision 1.10  2007/07/09 16:20:19  olereinhardt
+# 2007-07-09  Ole Reinhardt <ole.reinhardt@embedded-it.de>
+#         * net/Makefile: Commented in igmp_in.c and igmp_out.c again
+#         * net/ipin.c: igmp support reenabled
+#
 # Revision 1.9  2007/07/09 13:38:50  olereinhardt
 # 2007-07-09  Ole Reinhardt <ole.reinhardt@embedded-it.de>
 #         * dev/twbbif.c: Added default TWI_DELAY for avr architecture
@@ -85,7 +90,8 @@ SRC2 =  ipin.c ipout.c ipcsum.c route.c inet.c \
 	arpin.c arpout.c arpcache.c \
 	ethin.c ethout.c ifconfig.c confnet.c \
 	pppin.c pppout.c lcpout.c ipcpout.c \
-#	igmp.c igmpin.c igmpout.c
+	igmpin.c igmpout.c
+#       igmp.c
 
 OBJ1 = $(SRC1:.c=.o)
 OBJ2 = $(SRC2:.c=.o)
